hphp/hack/test/typecheck/readonly/lambda.php.exp
File "lambda.php", line 16, characters 5-16:
This expression is readonly, its members cannot be modified (Parsing[1002])
File "lambda.php", line 18, characters 5-16:
This expression is readonly, its members cannot be modified (Parsing[1002])
